[tool.poetry]
name = "zombotopia"
version = "0.1.0"
description = ""
authors = ["jwkwon0817 <jeewon.kwon.0817@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
